Добавил в CharacterFragment слушателя по долгому нажатию который открывает  DialogCharacterFragment и отображает картинку персонажа, на каждый фрагмент  CharacterFragment, LocationFragment, EpisodeFragment добавил детальный фрагмент и стянул все данные, переход и передачу данных осуществил с помощью setOnItemClickListener и  Navigation Safe Args, добавил Repository и переместил сюда логику стягивания данных а в ViewModel сделал запросы на стягивание данных через Repository, добавил BaseFragment, добавил пагинацию на каждый фрагмент кроме DialogCharacterFragment,

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,14 @@
     <string name="character">Character</string>
     <string name="location">Location</string>
     <string name="episode">Episode</string>
+    <string name="id">NUMBER ID:</string>
+    <string name="location_name">LOCATION NAME:</string>
+    <string name="type">TYPE:</string>
+    <string name="dimension">DIMENSION:</string>
+    <string name="gender">GENDER:</string>
+    <string name="hyphen">-</string>
+    <string name="episode_name">EPISODE NAME:</string>
+    <string name="air_date">AIR DATE:</string>
+    <string name="episod">EPISODE:</string>
+    <string name="created">CREATED:</string>
 </resources>
